--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <meta name="date" content="2025-03-28" />
 
-<title>index</title>
+<title>index.HTML</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,7 +349,7 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">index</h1>
+<h1 class="title toc-ignore">index.HTML</h1>
 <h4 class="date">2025-03-28</h4>
 
 </div>
